// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Home Page >  1`] = `
<div>
  <div
    class="header"
  >
    <img
      alt="LOGO"
      class="logo"
      src=""
    />
    <div
      class="navigation-bar"
    >
      <a>
        Menu
      </a>
      <a>
        Shop
      </a>
      <a>
        <img
          src="/src/assets/shoppingcart.svg"
        />
      </a>
    </div>
  </div>
  <div
    class="main"
  >
    <div
      class="content"
    >
      <h1>
        Lorem Ipsum fjdkffs fdsfds hdjkas
      </h1>
      <button>
        Menu
      </button>
    </div>
  </div>
</div>
`;

exports[`Home Page > clicks to  1`] = `
<div>
  <div
    class="header"
  >
    <img
      alt="LOGO"
      class="logo"
      src=""
    />
    <div
      class="navigation-bar"
    >
      <a>
        Menu
      </a>
      <a>
        Shop
      </a>
      <a>
        <img
          src="/src/assets/shoppingcart.svg"
        />
      </a>
    </div>
  </div>
  <div
    class="main"
  >
    <div
      class="content"
    >
      <h1>
        Lorem Ipsum fjdkffs fdsfds hdjkas
      </h1>
      <button>
        Menu
      </button>
    </div>
  </div>
</div>
`;

exports[`Home Page > clicks to shop page 1`] = `
<div>
  <div
    class="header"
  >
    <img
      alt="LOGO"
      class="logo"
      src=""
    />
    <div
      class="navigation-bar"
    >
      <a>
        Menu
      </a>
      <a>
        Shop
      </a>
      <a>
        <img
          src="/src/assets/shoppingcart.svg"
        />
      </a>
    </div>
  </div>
  <div
    class="main"
  >
    <div
      class="content"
    >
      <h1>
        Lorem Ipsum fjdkffs fdsfds hdjkas
      </h1>
      <button>
        Menu
      </button>
    </div>
  </div>
</div>
`;

exports[`Home Page > renders Home Page 1`] = `
<div>
  <div
    class="header"
  >
    <img
      alt="LOGO"
      class="logo"
      src=""
    />
    <div
      class="navigation-bar"
    >
      <a>
        Menu
      </a>
      <a>
        Shop
      </a>
      <a>
        <img
          src="/src/assets/shoppingcart.svg"
        />
      </a>
    </div>
  </div>
  <div
    class="main"
  >
    <div
      class="content"
    >
      <h1>
        Lorem Ipsum fjdkffs fdsfds hdjkas
      </h1>
      <button>
        Menu
      </button>
    </div>
  </div>
</div>
`;

exports[`Selected Page > renders Selected Page 1`] = `
<div>
  <div
    class="header"
  >
    <img
      alt="LOGO"
      class="logo"
      src=""
    />
    <div
      class="navigation-bar"
    >
      <a>
        Menu
      </a>
      <a>
        Shop
      </a>
      <a>
        <img
          src="/src/assets/shoppingcart.svg"
        />
      </a>
    </div>
  </div>
  <div
    class="main-selected-page"
  >
    <div
      class="main-header-row"
    >
      <div
        class="selected-page-name"
      >
        women's clothes
      </div>
      <div
        class="filter-option"
      >
        Sort By:
        <button>
          Popular
        </button>
      </div>
    </div>
    <div
      class="all-product-list"
    >
      <div
        class="product-list"
      >
        <img
          class="product-image"
          height="200"
          src=""
          width="400"
        />
        <div
          class="product-name"
        >
          Dress
        </div>
        <div
          class="pl-detail-row"
        >
          <div
            class="price"
          >
            15$
          </div>
          <button
            class="add-to-cart-btn"
          >
            Add to Cart
          </button>
        </div>
      </div>
      <div
        class="product-list"
      >
        <img
          class="product-image"
          height="200"
          src=""
          width="400"
        />
        <div
          class="product-name"
        >
          Dress
        </div>
        <div
          class="pl-detail-row"
        >
          <div
            class="price"
          >
            15$
          </div>
          <button
            class="add-to-cart-btn"
          >
            Add to Cart
          </button>
        </div>
      </div>
      <div
        class="product-list"
      >
        <img
          class="product-image"
          height="200"
          src=""
          width="400"
        />
        <div
          class="product-name"
        >
          Dress
        </div>
        <div
          class="pl-detail-row"
        >
          <div
            class="price"
          >
            15$
          </div>
          <button
            class="add-to-cart-btn"
          >
            Add to Cart
          </button>
        </div>
      </div>
      <div
        class="product-list"
      >
        <img
          class="product-image"
          height="200"
          src=""
          width="400"
        />
        <div
          class="product-name"
        >
          Dress
        </div>
        <div
          class="pl-detail-row"
        >
          <div
            class="price"
          >
            15$
          </div>
          <button
            class="add-to-cart-btn"
          >
            Add to Cart
          </button>
        </div>
      </div>
      <div
        class="product-list"
      >
        <img
          class="product-image"
          height="200"
          src=""
          width="400"
        />
        <div
          class="product-name"
        >
          Dress
        </div>
        <div
          class="pl-detail-row"
        >
          <div
            class="price"
          >
            15$
          </div>
          <button
            class="add-to-cart-btn"
          >
            Add to Cart
          </button>
        </div>
      </div>
      <div
        class="product-list"
      >
        <img
          class="product-image"
          height="200"
          src=""
          width="400"
        />
        <div
          class="product-name"
        >
          Dress
        </div>
        <div
          class="pl-detail-row"
        >
          <div
            class="price"
          >
            15$
          </div>
          <button
            class="add-to-cart-btn"
          >
            Add to Cart
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
